--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <title>Kedi Bakımı</title>
     <link rel="stylesheet" href="kedi.css">
     <style>
-     h1.h2.h3.h4.h5.h6 {text-align: center;}
+     h1,h2,h3,h4,h5,h6 {text-align: center;}
+     p {text-align: center;}
         h1 {color:aqua; font-size:50px; text-align: center;text-decoration-line: overline}
         h2{ color:blueviolet; text-align: center;}
         h4 { text-transform: uppercase;}
         body{background-color:beige; }
         p{color:rgb(6, 63, 44)}
+        article {text-align: center;}
+        a {text-align: center;}
         
     </style>
     
