--- a/index.html
+++ b/index.html
@@ -56,3 +56,8 @@
 <address>
     Beyoğlu/Taksim
 </address>
+<ul>
+    <li>Lorem, ipsum dolor.</li>
+    <li>Debitis, modi qui!</li>
+    <li>Error, debitis voluptates.</li>
+</ul>
